113-ingress/01-ingress-example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-ingress
  labels:
    app: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          command: ["sh", "-c", "echo VERSION 1.0 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---

apiVersion: v1
kind: Service
metadata:
  name: app-v1
  labels:
    app: front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 8080 # Puerto del servicio
      targetPort: 80 # Puerto del contenedor o pods
