113-ingress/04-app-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          command: ["sh", "-c", "echo App desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---

apiVersion: v1
kind: Service
metadata:
  name: api-server
  labels:
    app: api-server
spec:
  type: ClusterIP
  selector:
    app: api-server
  ports:
    - protocol: TCP
      port: 9090 # Puerto del servicio
      targetPort: 80 # Puerto del contenedor o pods
