113-ingress/02-ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /appv1
          pathType: Prefix  # Obligatorio
          backend:
            service:
              name: app-v1 # Nombre del servicio
              port:
                number: 8080 # Puerto del servicio
