113-ingress/05-app-ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app1.mydomain.com
    http:
      paths:
        - path: /
          pathType: Prefix  # Obligatorio
          backend:
            service:
              name: api-server # Nombre del servicio
              port:
                number: 9090 # Puerto del servicio
